change some colors

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 							<p class="reason__text">Оборудование для детских площадок европейского качества
 								произведенное в России из высококачественных материалов.</p>
 							<div class="reason__bg">
-								<p>1</p>
+								<p class="green">1</p>
 							</div>
 						</div>
 						<div class="col-12 col-sm-6 col-lg-4 reason">
@@ -50,7 +50,7 @@
 								Вас комплектацию уже существующих линеек.
 								Большой выбор цветов комплектующих.</p>
 							<div class="reason__bg">
-								<p>2</p>
+								<p class="pirple">2</p>
 							</div>
 						</div>
 						<div class="col-12 col-sm-6 col-lg-4 reason">
@@ -58,7 +58,7 @@
 							<p class="reason__text">Собственное производство комплексов для дворовой игры без срывов ранее
 								оговоренных сроков. Возможность разбить платеж за поставляемое оборудование.</p>
 							<div class="reason__bg">
-								<p>3</p>
+								<p class="green">3</p>
 							</div>
 						</div>
 						<div class="col-12 col-sm-6 col-lg-4 reason">
@@ -66,7 +66,7 @@
 							<p class="reason__text">Личный менеджер по проекту, доступный 24/7. Поможем с визуализацией будущей
 								детской площадки. Предоставим 3D- и DWG- модели детского оборудования.</p>
 							<div class="reason__bg">
-								<p>4</p>
+								<p class="pirple">4</p>
 							</div>
 						</div>
 						<div class="col-12 col-sm-6 col-lg-4 reason">
@@ -74,7 +74,7 @@
 							<p class="reason__text">Профессиональная команда монтажников, работы любой сложности и на любой вид
 								основания. Предоставим паспорта и схемы сборки, либо осуществим монтаж «под ключ».</p>
 							<div class="reason__bg">
-								<p>5</p>
+								<p class="green">5</p>
 							</div>
 						</div>
 						<div class="col-12 col-sm-6 col-lg-4 reason">
@@ -82,7 +82,7 @@
 							<p class="reason__text">На все наше оборудование и материалы распространяется гарантия до 20 лет.
 								Мы соблюдаем гарантийные обязательства, прописанные в договоре.</p>
 							<div class="reason__bg">
-								<p>6</p>
+								<p class="pirple">6</p>
 							</div>
 						</div>
 					</div>
@@ -187,7 +187,7 @@
 								Этот прием во все времена использовался в ландшафтном искусстве и актуален в наши дни.</p>
 							<img src="img/shelby/3.webp" alt="" class="card__bg scales">
 						</div>
-						<div class="shelby__card card">
+						<div class="shelby__card card сar-2">
 							<h4 class="card__title">Индивидуальные решения</h4>
 							<p class="card__subtitle">Помимо оборудования представленного в каталоге, мы разрабатываем,
 								изготавливаем и устанавливаем индивидуальные проекты.</p>
