--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 								<!-- пожалуй, лучшие детские игровые проcтранства -->
 							</span></h1>
 						<div class="buttons">
-							<a href="#" class=" btn btn_1">Онлайн расчёт</a>
+							<a href='#popup1' class=" btn btn_1 popup-link">Онлайн расчёт</a>
 							<a href="#" class="btn btn_2">Оборудование в наличии</a>
 						</div>
 					</div>
@@ -143,7 +143,7 @@
 							<p class="calculation__text">Ответьте на несколько простых вопросов, и мы рассчитаем стоимость
 								вашего детского игрового оборудования!</p>
 							<div class="buttons">
-								<a href="#" class=" btn btn_1">Онлайн расчёт</a>
+								<a href="#popup1" class=" btn btn_1 popup-link">Онлайн расчёт</a>
 								<a href="#" class="btn btn_2">Смотреть каталог</a>
 							</div>
 						</div>
@@ -259,7 +259,7 @@
 							<p class="calculation__text">Ответьте на несколько простых вопросов, и мы рассчитаем стоимость
 								вашего детского игрового оборудования!</p>
 							<div class="buttons">
-								<a href="#" class=" btn btn_1">Онлайн расчёт</a>
+								<a href="#popup1" class=" btn btn_1 popup-link">Онлайн расчёт</a>
 								<a href="#" class="btn btn_2">Смотреть каталог</a>
 							</div>
 						</div>
@@ -363,8 +363,10 @@
 
 		</main>
 		@@include('html/footer.html', {})
+		@@include('html/popup.html', {})
 	</div>
 	@@include('html/scripts.html', {})
+
 </body>
 
 </html>
