--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -14,69 +14,82 @@
 			<div class="modal__progressbar">
 				<div class="modal__progressbar-progress"></div>
 			</div>
-			<div class="modal__body_1 modal__body ">
-				<h3 class="modal__body-title">Какой у вас тип объекта?</h3>
-				<div class="modal__wrapper">
-					<div class="modal__card popup">
-						<div class="popup__img">
-							<img src="@img/popup/1.webp" alt="">
-						</div>
-						<p class="popup__text">
-							Частные объекты, дача, дом и т.п.</p>
-					</div>
-					<div class="modal__card popup">
-						<div class="popup__img">
-							<img src="@img/popup/2.webp" alt="">
-						</div>
-						<p class="popup__text">Общеобразовательные учреждения, школы, колледжи, детские сады и т.п.</p>
-					</div>
-					<div class="modal__card popup">
-						<div class="popup__img">
-							<img src="@img/popup/3.webp" alt="">
-						</div>
-						<p class="popup__text">
-							Жилые комплексы, ГБУ жилищники, программы реновации, Мой двор и т.п.</p>
-					</div>
-					<div class="modal__card popup">
-						<div class="popup__img">
-							<img src="@img/popup/4.webp" alt="">
-						</div>
-						<p class="popup__text">Парки, скверы, благотворительные объекты и т.п.</p>
+			<form action=""></form>
+			<form action="#" method="post">
+				<div class="modal__body_1 modal__body active">
+					<h3 class="modal__body-title">Какой у вас тип объекта?</h3>
+					<div class="modal__wrapper">
+						<label class="modal__card popup">
+							<input class="popup__object" type="radio" name="Какой у вас тип объекта"
+								value="Частные объекты, дача, дом и т.п." id="">
+							<div class="popup__img">
+								<img src="@img/popup/1.webp" alt="">
+							</div>
+							<p class="popup__text">
+								Частные объекты, дача, дом и т.п.</p>
+						</label>
+						<label class="modal__card popup">
+							<input class="popup__object" type="radio" name="Какой у вас тип объекта"
+								value="Общеобразовательные учреждения, школы, колледжи, детские сады и т.п" id="">
+							<div class="popup__img">
+								<img src="@img/popup/2.webp" alt="">
+							</div>
+							<p class="popup__text">Общеобразовательные учреждения, школы, колледжи, детские сады и т.п.</p>
+						</label>
+						<label class="modal__card popup">
+							<input class="popup__object" type="radio" name="Какой у вас тип объекта"
+								value="Жилые комплексы, ГБУ жилищники, программы реновации, Мой двор и т.п" id="">
+							<div class="popup__img">
+								<img src="@img/popup/3.webp" alt="">
+							</div>
+							<p class="popup__text">
+								Жилые комплексы, ГБУ жилищники, программы реновации, Мой двор и т.п.</p>
+						</label>
+						<label class="modal__card popup">
+							<input class="popup__object" type="radio" name="Какой у вас тип объекта"
+								value="Парки, скверы, благотворительные объекты и т.п" id="">
+							<div class="popup__img">
+								<img src="@img/popup/4.webp" alt="">
+							</div>
+							<p class="popup__text">Парки, скверы, благотворительные объекты и т.п.</p>
+						</label>
 					</div>
 				</div>
-			</div>
-			<div class="modal__body_2 modal__range modal__body active">
-				<h3 class="modal__body-title">Какой бюджет вы закладываете в благоустройство территории? (в тысячах рублей)
-				</h3>
-				<div class="scrollbar">
+				<div class="modal__body_2 modal__range modal__body ">
+					<h3 class="modal__body-title">Какой бюджет вы закладываете в благоустройство территории? (в тысячах
+						рублей)
+					</h3>
+					<div class="scrollbar">
 
-					<div class="scrollbar__box">
-						<input type="number" class="scrollbar__value" min="300000" max="30000000" value="1">
-						<input type="range" class="scrollbar__slider" min="0" max="100" step="1" oninput="rangeSlider(this)">
+						<div class="scrollbar__box">
+							<input type="number" class="scrollbar__value" min="300000" max="30000000" value="1">
+							<input type="range" class="scrollbar__slider" min="0" max="100" step="1"
+								oninput="rangeSlider(this)">
 
-					</div>
-					<div class=" scrollbar__meanings">
-						<p class="scrollmar__min">300000</p>
-						<p class="scrollbar__max">30000000</p>
-					</div>
-				</div>
-			</div>
-			<div class="modal__body_3 modal__range modal__body">
-				<h3 class="modal__body-title">Укажите сроки сдачи объекта? (в месяцах)</h3>
-				<div class="scrollbar">
-					<input type="number" class="scrollbar__value" min="1" max="12" value="1">
-					<div class="scrollbar__box">
-						<input type="range" class="scrollbar__slider" min="1" max="12" oninput="rangeSlider(this)">
-					</div>
-					<div class=" scrollbar__meanings">
-						<p class="scrollmar__min">1</p>
-						<p class="scrollbar__max">12</p>
+						</div>
+						<div class=" scrollbar__meanings">
+							<p class="scrollmar__min">300000</p>
+							<p class="scrollbar__max">30000000</p>
+						</div>
 					</div>
 				</div>
-			</div>
+				<div class="modal__body_3 modal__range modal__body">
+					<h3 class="modal__body-title">Укажите сроки сдачи объекта? (в месяцах)</h3>
+					<div class="scrollbar">
+						<input type="number" class="scrollbar__value" min="1" max="12" value="1">
+						<div class="scrollbar__box">
+							<input type="range" class="scrollbar__slider" min="1" max="12" oninput="rangeSlider(this)">
+						</div>
+						<div class=" scrollbar__meanings">
+							<p class="scrollmar__min">1</p>
+							<p class="scrollbar__max">12</p>
+						</div>
+					</div>
+				</div>
+			</form>
 			<div class="modal__footer">
-				<button class="modal__prev">Назад</button>
-				<button class="modal__next">Вперёд</button>
+				<button type="button" class="modal__prev">Назад</button>
+				<button type="button" class="modal__next">Вперёд</button>
 			</div>
 		</div>
 	</div>
