--- a/src/html/head.html
+++ b/src/html/head.html
@@ -8,7 +8,7 @@
 	<!-- libs -->
 	<link rel="stylesheet" href="styles/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="styles/swiper-bundle.min.css">
-	<link rel="stylesheet" href="styles/style.min.css">
+	<link rel="stylesheet" href="styles/@@style.min.css">
 	<!-- Media -->
 	<title>@@title</title>
 </head>
