--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -1,4 +1,4 @@
-<div id="popup1" class="modal open">
+<!-- <div id="popup1" class="modal">
 	<div class="modal__dialog">
 		<div class="modal__head">
 			<a href="#" class="modal__close close-modal">
@@ -6,7 +6,10 @@
 			</a>
 		</div>
 		<div class="modal__content">
+			<form action="#" method="post"></form>
 			<div class="modal__header">
+				<h4 class="modal__last-text">Спасибо за ваши ответы, оставьте контакты, в скором времени наши специалисты
+					свяжутся с вами.</h4>
 				<h5 class="modal__title">Пройдите краткий опросник, чтоб наши специалисты помогли вам с решением задачи как
 					можно быстрее.</h5>
 				<p class="modal__steps"><span class="modal__step">1</span>/3</p>
@@ -14,83 +17,221 @@
 			<div class="modal__progressbar">
 				<div class="modal__progressbar-progress"></div>
 			</div>
-			<form action=""></form>
-			<form action="#" method="post">
-				<div class="modal__body_1 modal__body active">
-					<h3 class="modal__body-title">Какой у вас тип объекта?</h3>
-					<div class="modal__wrapper">
-						<label class="modal__card popup">
-							<input class="popup__object" type="radio" name="Какой у вас тип объекта"
-								value="Частные объекты, дача, дом и т.п." id="">
-							<div class="popup__img">
-								<img src="@img/popup/1.webp" alt="">
-							</div>
-							<p class="popup__text">
-								Частные объекты, дача, дом и т.п.</p>
-						</label>
-						<label class="modal__card popup">
-							<input class="popup__object" type="radio" name="Какой у вас тип объекта"
-								value="Общеобразовательные учреждения, школы, колледжи, детские сады и т.п" id="">
-							<div class="popup__img">
-								<img src="@img/popup/2.webp" alt="">
-							</div>
-							<p class="popup__text">Общеобразовательные учреждения, школы, колледжи, детские сады и т.п.</p>
-						</label>
-						<label class="modal__card popup">
-							<input class="popup__object" type="radio" name="Какой у вас тип объекта"
-								value="Жилые комплексы, ГБУ жилищники, программы реновации, Мой двор и т.п" id="">
-							<div class="popup__img">
-								<img src="@img/popup/3.webp" alt="">
-							</div>
-							<p class="popup__text">
-								Жилые комплексы, ГБУ жилищники, программы реновации, Мой двор и т.п.</p>
-						</label>
-						<label class="modal__card popup">
-							<input class="popup__object" type="radio" name="Какой у вас тип объекта"
-								value="Парки, скверы, благотворительные объекты и т.п" id="">
-							<div class="popup__img">
-								<img src="@img/popup/4.webp" alt="">
-							</div>
-							<p class="popup__text">Парки, скверы, благотворительные объекты и т.п.</p>
-						</label>
-					</div>
-				</div>
-				<div class="modal__body_2 modal__range modal__body ">
-					<h3 class="modal__body-title">Какой бюджет вы закладываете в благоустройство территории? (в тысячах
-						рублей)
-					</h3>
-					<div class="scrollbar">
 
-						<div class="scrollbar__box">
-							<input type="number" class="scrollbar__value" min="300000" max="30000000" value="1">
-							<input type="range" class="scrollbar__slider" min="0" max="100" step="1"
-								oninput="rangeSlider(this)">
+			<div class="modal__body_1 modal__body active">
+				<h3 class="modal__body-title">Какой у вас тип объекта?</h3>
+				<div class="modal__wrapper">
+					<label class="modal__card popup">
+						<input class="popup__object" type="radio" name="Какой у вас тип объекта"
+							value="Частные объекты, дача, дом и т.п." id="">
+						<div class="popup__img">
+							<img src="@img/popup/1.webp" alt="">
+						</div>
+						<p class="popup__text">
+							Частные объекты, дача, дом и т.п.</p>
+					</label>
+					<label class="modal__card popup">
+						<input class="popup__object" type="radio" name="Какой у вас тип объекта"
+							value="Общеобразовательные учреждения, школы, колледжи, детские сады и т.п" id="">
+						<div class="popup__img">
+							<img src="@img/popup/2.webp" alt="">
+						</div>
+						<p class="popup__text">Общеобразовательные учреждения, школы, колледжи, детские сады и т.п.</p>
+					</label>
+					<label class="modal__card popup">
+						<input class="popup__object" type="radio" name="Какой у вас тип объекта"
+							value="Жилые комплексы, ГБУ жилищники, программы реновации, Мой двор и т.п" id="">
+						<div class="popup__img">
+							<img src="@img/popup/3.webp" alt="">
+						</div>
+						<p class="popup__text">
+							Жилые комплексы, ГБУ жилищники, программы реновации, Мой двор и т.п.</p>
+					</label>
+					<label class="modal__card popup">
+						<input class="popup__object" type="radio" name="Какой у вас тип объекта"
+							value="Парки, скверы, благотворительные объекты и т.п" id="">
+						<div class="popup__img">
+							<img src="@img/popup/4.webp" alt="">
+						</div>
+						<p class="popup__text">Парки, скверы, благотворительные объекты и т.п.</p>
+					</label>
+				</div>
+			</div>
+			<div class="modal__body_2 modal__range modal__body ">
+				<h3 class="modal__body-title">Какой бюджет вы закладываете в благоустройство территории? (в тысячах
+					рублей)
+				</h3>
+				<div class="scrollbar">
 
-						</div>
-						<div class=" scrollbar__meanings">
-							<p class="scrollmar__min">300000</p>
-							<p class="scrollbar__max">30000000</p>
-						</div>
+					<div class="scrollbar__box">
+						<input type="number" class="scrollbar__value" min="300000" max="30000000" value="1">
+						<input type="range" class="scrollbar__slider" min="0" max="100" step="1" oninput="rangeSlider(this)">
+
+					</div>
+					<div class=" scrollbar__meanings">
+						<p class="scrollmar__min">300000</p>
+						<p class="scrollbar__max">30000000</p>
 					</div>
 				</div>
-				<div class="modal__body_3 modal__range modal__body">
-					<h3 class="modal__body-title">Укажите сроки сдачи объекта? (в месяцах)</h3>
-					<div class="scrollbar">
-						<input type="number" class="scrollbar__value" min="1" max="12" value="1">
-						<div class="scrollbar__box">
-							<input type="range" class="scrollbar__slider" min="1" max="12" oninput="rangeSlider(this)">
-						</div>
-						<div class=" scrollbar__meanings">
-							<p class="scrollmar__min">1</p>
-							<p class="scrollbar__max">12</p>
-						</div>
+			</div>
+			<div class="modal__body_3 modal__range modal__body">
+				<h3 class="modal__body-title">Укажите сроки сдачи объекта? (в месяцах)</h3>
+				<div class="scrollbar">
+					<input type="number" class="scrollbar__value" min="1" max="12" value="1">
+					<div class="scrollbar__box">
+						<input type="range" class="scrollbar__slider" min="1" max="12" oninput="rangeSlider(this)">
+					</div>
+					<div class=" scrollbar__meanings">
+						<p class="scrollmar__min">1</p>
+						<p class="scrollbar__max">12</p>
 					</div>
 				</div>
-			</form>
+			</div>
+			<div class="modal__body_4 modal__body">
+				<div class="modal__body-tel">
+					<label for="main-modal__body-tel" class="modal__body-title">Номер телефона</label>
+					<input type="tel" id="main-modal__body-tel" placeholder="+7 (999) 999-99-99">
+				</div>
+				<div class="modal__body-name">
+					<label for="main-modal__body-tel" class="modal__body-title">Ваше имя</label>
+					<input type="text" placeholder="Имя">
+				</div>
+				<div class="modal__body-email">
+					<label for="main-modal__body-tel" class="modal__body-title">Ваш e-mail</label>
+					<input type="email" placeholder="Почта">
+				</div>
+			</div>
+
 			<div class="modal__footer">
 				<button type="button" class="modal__prev">Назад</button>
 				<button type="button" class="modal__next">Вперёд</button>
+				<button type="submit" class="modal__form-submit">Отправить ответы</button>
 			</div>
+			</form>
+		</div>
+	</div>
+</div> -->
+
+
+<div id="formPopup" class="modal open">
+	<div class="modal__dialog">
+		<div class="modal__head">
+			<a href="#" class="modal__close close-modal">
+				<span></span>
+			</a>
+		</div>
+		<div class="modal__content">
+			<form action="#" id="form" class="form__body">
+				<div class="modal__header">
+					<div class="modal__titles">
+						<h5 class="modal__title">Пройдите краткий опросник, чтоб наши специалисты помогли вам с решением
+							задачи как можно быстрее.</h5>
+						<p class="modal__steps"><span class="modal__step">1</span>/3</p>
+					</div>
+					<div class="modal__lasts-text">
+						<h4 class="modal__last-text">Спасибо за ваши ответы, оставьте контакты, в скором времени наши
+							специалисты
+							свяжутся с вами.</h4>
+					</div>
+				</div>
+
+				<div class="modal__progressbar">
+					<div class="modal__progressbar-progress"></div>
+				</div>
+
+				<div class="form__items">
+					<div class="form__item" id="body_1">
+						<div class="form__label">
+							<h3 class="form__label-title">Какой у вас тип объекта?</h3 la>
+						</div>
+						<div class="options">
+							<div class="options__item">
+								<label for="privateFacilities" class="options__label">
+									<img src="@img/popup/1.webp" alt="Дом">
+									<p class="options__text">Частные объекты, дача, дом и т.п.</p>
+								</label>
+								<input type="radio" name="typeObject" value="Частные объекты, дача, дом и т.п."
+									id="privateFacilities">
+							</div>
+							<div class="options__item">
+								<label for="schools" class="options__label">
+									<img src="@img/popup/2.webp" alt="schools">
+									<p class="options__text">Общеобразовательные учреждения, школы, колледжи, детские сады и т.п.
+									</p>
+								</label>
+								<input type="radio" name="typeObject" id="schools"
+									value="Общеобразовательные учреждения, школы, колледжи, детские сады и т.п.">
+							</div>
+							<div class="options__item">
+								<label for="residentialСomplexes" class="options__label">
+									<img src="@img/popup/3.jpg" alt="Жилые комплексы">
+									<p class="options__text">Жилые комплексы, ГБУ жилищники, программы реновации, мой двор и т.п.
+									</p>
+								</label>
+								<input type="radio" name="typeObject" id="residentialСomplexes"
+									value="Жилые комплексы, ГБУ жилищники, программы реновации, мой двор и т.п.">
+							</div>
+							<div class="options__item">
+								<label for="parks" class="options__label">
+									<img src="@img/popup/4.webp" alt="Парки">
+									<p class="options__text">Парки, скверы, благотворительные объекты и т.п.</p>
+								</label>
+								<input type="radio" name="typeObject" id="parks"
+									value="Парки, скверы, благотворительные объекты и т.п.">
+							</div>
+						</div>
+					</div>
+					<div class="form__item" id="body_2">
+						<div class="form__label">
+							<h3 class="form__label-title">Какой бюджет вы закладываете в благоустройство территории?</h3>
+						</div>
+						<div class="ranges">
+							<input type="number" min="300000" max="30000000" name="budgetNumber" id="budgetNumber">
+							<input type="range" name="budget" id="rangeBudget" min="0" max="100" step="1">
+							<div class="ranges__meanings">
+								<p class="ranges__min">300000</p>
+								<p class="ranges__max">30000000</p>
+							</div>
+						</div>
+
+					</div>
+					<div class="form__item" id="body_3">
+						<div class="form__label">
+							<h3 class="form__label-title">Укажите сроки сдачи объекта? (в месяцах)</h3>
+						</div>
+						<div class="ranges">
+							<input type="number" min="1" max="12" name="dateNumber" id="dateNumber">
+							<input type="range" name="date" id="rangeDate" min="1" max="12" step="1">
+							<div class="ranges__meanings">
+								<p class="ranges__min">1</p>
+								<p class="ranges__max">12</p>
+							</div>
+						</div>
+					</div>
+					<div class="form__item" id="body_4">
+						<div class="informations">
+							<div class="informations__tel">
+								<label for="formTel" class="informations__label">Ваш номер телефона</label>
+								<input type="tel" name="tel" id="formTel" class="form__input">
+							</div>
+							<div class="informations__name">
+								<label for="formName" class="informations__label">Ваше имя</label>
+								<input type="text" name="name" id="formName" class="form__input">
+							</div>
+							<div class="informations__email">
+								<label for="formEmail" class="informations__label">Ваш E-mail</label>
+								<input type="email" name="email" id="formEmail" class="form__input">
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="modal__footer">
+					<button class="modal__back">Назад</button>
+					<button class="modal__next">Вперёд</button>
+					<button type="submit" class="form__button">Отправить ответы</button>
+				</div>
+			</form>
 		</div>
 	</div>
 </div>
