--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('html/head.html', {
-"title": "Главная"
+"title": "Главная",
+"style": "style"
 })
 
 <body>
@@ -363,7 +364,7 @@
 
 		</main>
 		@@include('html/footer.html', {})
-		@@include('html/popup.html', {})
+		<!-- @@include('html/popup.html', {}) -->
 	</div>
 	@@include('html/scripts.html', {})
 
