--- a/src/html/header.html
+++ b/src/html/header.html
@@ -7,28 +7,63 @@
 			</div>
 			<nav class="header__menu">
 				<div class="header__logo">
-					<a href="#" class="header__link"><img src="img/logo.png" alt=""></a>
+					<a href="index.html" class="header__link"><img src="img/logo.png" alt=""></a>
 				</div>
-				<ul class="header__list">
-					<li>
-						<a href="#" class="header__link">Компания</a>
-					</li>
-					<li>
-						<a href="#" class="header__link">Каталог</a>
-					</li>
-					<li>
-						<a href="#" class="header__link">Дополнительное оборудование</a>
-					</li>
-					<li>
-						<a href="#" class="header__link">Для проектировщиков и госучреждений</a>
-					</li>
-					<li>
-						<a href="#" class="header__link">Обслуживание</a>
-					</li>
-					<li>
-						<a href="#" class="header__link">Контакты</a>
-					</li>
-				</ul>
+				<div class="header__list">
+					<div class="header__item">
+						<h3 class="header__link">Компания</h3>
+						<div class="header__second-list">
+							<a href="#" class="header__second-link">О компании</a>
+							<a href="#" class="header__second-link">Команда</a>
+							<a href="#" class="header__second-link">Новости</a>
+							<a href="#" class="header__second-link">Проекты</a>
+							<a href="#" class="header__second-link">Отзывы</a>
+						</div>
+					</div>
+					<div class="header__item">
+						<h3 class="header__link">Каталог</h3>
+						<div class="header__second-list">
+							<a href="#" class="header__second-link">ВЕСЬ КАТАЛОГ</a>
+							<a href="#" class="header__second-link">ГОТОВЫЕ РЕШЕНИЯ</a>
+							<a href="#" class="header__second-link">ОБОРУДОВАНИЕ В НАЛИЧИИ</a>
+						</div>
+					</div>
+					<div class="header__item">
+						<h3 class="header__link">Дополнительное оборудование</h3>
+						<div class="header__second-list">
+							<a href="#" class="header__second-link">О компании</a>
+							<a href="#" class="header__second-link">О компании</a>
+							<a href="#" class="header__second-link">О компании</a>
+							<a href="#" class="header__second-link">О компании</a>
+							<a href="#" class="header__second-link">О компании</a>
+						</div>
+					</div>
+					<div class="header__item">
+						<a href="#">
+							<h3 class="header__link header__second-link">Для проектировщиков и госучреждений</h3>
+						</a>
+					</div>
+					<div class="header__item">
+						<h3 class="header__link">Обслуживание</h3>
+						<div class="header__second-list">
+							<a href="#" class="header__second-link">Доставка</a>
+							<a href="#" class="header__second-link">Монтаж</a>
+							<a href="#" class="header__second-link">Материалы</a>
+							<a href="#" class="header__second-link">Безопасность</a>
+						</div>
+					</div>
+					<div class="header__item">
+						<h3 class="header__link">Контакты</h3>
+						<div class="header__second-list">
+							<a href="tel:+74993905007 " class="header__second-link" target="_blank">+7 (499) 390-50-07 </a>
+							<a href="mailto:hello@shelby-ltd.ru" class="header__second-link"
+								target="_blank">hello@shelby-ltd.ru</a>
+							<a href="#" class="header__second-link">Заказать звонок</a>
+							<a href="https://wa.me/79258716516" class="header__second-link" target="_blank">WhatsApp</a>
+							<a href="https://t.me/shelbyplay" class="header__second-link" target="_blank">Telegram</a>
+						</div>
+					</div>
+				</div>
 			</nav>
 		</div>
 	</div>
