--- a/src/html/scripts.html
+++ b/src/html/scripts.html
@@ -2,5 +2,6 @@
 <script src="js/typed.min.js"></script>
 <script src="js/swiper-bundle.min.js"></script>
 <script src="js/burger.min.js"></script>
+<script src="js/jquery.maskedinput.min.js"></script>
 <script src="js/app.min.js"></script>
 <script src="js/popup.min.js"></script>
