add mounting page

--- a/src/html/calculation.html
+++ b/src/html/calculation.html
@@ -113,7 +113,7 @@
 </div> -->
 
 
-<div id="formPopup" class="modal open">
+<div id="formPopup" class="modal">
 	<div class="modal__dialog">
 		<div class="modal__head">
 			<a href="#" class="modal__close close-modal">
@@ -150,8 +150,8 @@
 									<img src="@img/popup/1.webp" alt="Дом">
 									<p class="options__text">Частные объекты, дача, дом и т.п.</p>
 								</label>
-								<input type="radio" name="typeObject" value="Частные объекты, дача, дом и т.п."
-									id="privateFacilities">
+								<input class="options__input" type="radio" name="typeObject"
+									value="Частные объекты, дача, дом и т.п." id="privateFacilities">
 							</div>
 							<div class="options__item">
 								<label for="schools" class="options__label">
@@ -159,7 +159,7 @@
 									<p class="options__text">Общеобразовательные учреждения, школы, колледжи, детские сады и т.п.
 									</p>
 								</label>
-								<input type="radio" name="typeObject" id="schools"
+								<input class="options__input" type="radio" name="typeObject" id="schools"
 									value="Общеобразовательные учреждения, школы, колледжи, детские сады и т.п.">
 							</div>
 							<div class="options__item">
@@ -168,7 +168,7 @@
 									<p class="options__text">Жилые комплексы, ГБУ жилищники, программы реновации, мой двор и т.п.
 									</p>
 								</label>
-								<input type="radio" name="typeObject" id="residentialСomplexes"
+								<input class="options__input" type="radio" name="typeObject" id="residentialСomplexes"
 									value="Жилые комплексы, ГБУ жилищники, программы реновации, мой двор и т.п.">
 							</div>
 							<div class="options__item">
@@ -176,7 +176,7 @@
 									<img src="@img/popup/4.webp" alt="Парки">
 									<p class="options__text">Парки, скверы, благотворительные объекты и т.п.</p>
 								</label>
-								<input type="radio" name="typeObject" id="parks"
+								<input class="options__input" type="radio" name="typeObject" id="parks"
 									value="Парки, скверы, благотворительные объекты и т.п.">
 							</div>
 						</div>
