--- a/src/html/header.html
+++ b/src/html/header.html
@@ -13,11 +13,9 @@
 					<div class="header__item">
 						<h3 class="header__link">Компания</h3>
 						<div class="header__second-list">
-							<a href="#" class="header__second-link">О компании</a>
-							<a href="#" class="header__second-link">Команда</a>
+							<a href="company.html" class="header__second-link">О компании</a>
 							<a href="#" class="header__second-link">Новости</a>
 							<a href="#" class="header__second-link">Проекты</a>
-							<a href="#" class="header__second-link">Отзывы</a>
 						</div>
 					</div>
 					<div class="header__item">
@@ -39,17 +37,17 @@
 						</div>
 					</div>
 					<div class="header__item">
-						<a href="#">
+						<a href="partners.html">
 							<h3 class="header__link header__second-link">Для проектировщиков и госучреждений</h3>
 						</a>
 					</div>
 					<div class="header__item">
 						<h3 class="header__link">Обслуживание</h3>
 						<div class="header__second-list">
-							<a href="#" class="header__second-link">Доставка</a>
-							<a href="#" class="header__second-link">Монтаж</a>
+							<a href="delivery.html" class="header__second-link">Доставка</a>
+							<a href="mounting.html" class="header__second-link">Монтаж</a>
 							<a href="#" class="header__second-link">Материалы</a>
-							<a href="#" class="header__second-link">Безопасность</a>
+							<a href="safety.html" class="header__second-link">Безопасность</a>
 						</div>
 					</div>
 					<div class="header__item">
