--- a/src/html/scripts.html
+++ b/src/html/scripts.html
@@ -4,4 +4,4 @@
 <script src="js/burger.min.js"></script>
 <script src="js/jquery.maskedinput.min.js"></script>
 <script src="js/app.min.js"></script>
-<script src="js/popup.min.js"></script>
+<script src="js/calculation.min.js"></script>
