--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 								<!-- пожалуй, лучшие детские игровые проcтранства -->
 							</span></h1>
 						<div class="buttons">
-							<a href='#popup1' class=" btn btn_1 popup-link">Онлайн расчёт</a>
+							<a href='#calculation' class=" btn btn_1 popup-link">Онлайн расчёт</a>
 							<a href="#" class="btn btn_2">Оборудование в наличии</a>
 						</div>
 					</div>
@@ -144,7 +144,7 @@
 							<p class="calculation__text">Ответьте на несколько простых вопросов, и мы рассчитаем стоимость
 								вашего детского игрового оборудования!</p>
 							<div class="buttons">
-								<a href="#popup1" class=" btn btn_1 popup-link">Онлайн расчёт</a>
+								<a href="#calculation" class=" btn btn_1 popup-link">Онлайн расчёт</a>
 								<a href="#" class="btn btn_2">Смотреть каталог</a>
 							</div>
 						</div>
