add link on calculator modal in another pages

--- a/src/mounting.html
+++ b/src/mounting.html
@@ -78,6 +78,7 @@
 			@@include('html/repeat.html', {})
 		</main>
 		@@include('html/footer.html', {})
+		@@include('html/calculation.html', {})
 	</div>
 	@@include('html/scripts.html', {})
 
