--- a/src/company.html
+++ b/src/company.html
@@ -148,6 +148,7 @@
 			@@include('html/repeat.html', {})
 		</main>
 		@@include('html/footer.html', {})
+		@@include('html/calculation.html', {})
 	</div>
 	@@include('html/scripts.html', {})
 
