--- a/src/delivery.html
+++ b/src/delivery.html
@@ -143,6 +143,7 @@
 			@@include('html/repeat.html', {})
 		</main>
 		@@include('html/footer.html', {})
+		@@include('html/calculation.html', {})
 	</div>
 	@@include('html/scripts.html', {})
 
