--- a/src/safety.html
+++ b/src/safety.html
@@ -105,6 +105,7 @@
 			@@include('html/repeat.html', {})
 		</main>
 		@@include('html/footer.html', {})
+		@@include('html/calculation.html', {})
 	</div>
 	@@include('html/scripts.html', {})
 
