add catalog page, but need to finish

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -21,7 +21,7 @@
 					<div class="header__item">
 						<h3 class="header__link">Каталог</h3>
 						<div class="header__second-list">
-							<a href="#" class="header__second-link">ВЕСЬ КАТАЛОГ</a>
+							<a href="catalog.html" class="header__second-link">ВЕСЬ КАТАЛОГ</a>
 							<a href="#" class="header__second-link">ГОТОВЫЕ РЕШЕНИЯ</a>
 							<a href="#" class="header__second-link">ОБОРУДОВАНИЕ В НАЛИЧИИ</a>
 						</div>
