--- a/src/html/catalog/catalog_product.html
+++ b/src/html/catalog/catalog_product.html
@@ -1,4 +1,4 @@
-<div id="product" class="modal open">
+<div id="product" class="modal">
 	<div class="modal__dialog">
 		<div class="modal__head">
 			<a href="#" class="modal__close close-modal">
