--- a/src/catalog/SHR.html
+++ b/src/catalog/SHR.html
@@ -13,7 +13,7 @@
 				<div class="container">
 					<h2 class="preview__title">Каталог оборудования для детских игровых и спортивных площадок</h2>
 				</div>
-				<div class="preview__bg"><img src="@img/1.webp" alt=""></div>
+				<div class="preview__bg"><img src="../@img/1.webp" alt=""></div>
 			</section>
 
 			@@include('../html/catalog/catalog_breadcumps.html', {
@@ -160,8 +160,9 @@
 			@@include('../html/catalog/catalog_repeat.html', {})
 		</main>
 		@@include('../html/catalog/catalog_footer.html', {})
-		@@include('../html/catalog/catalog_calculation.html', {})
 		@@include('../html/catalog/catalog_product.html', {})
+		@@include('../html/catalog/catalog_calculation.html', {})
+		
 	</div>
 	@@include('../html/catalog/catalog_scripts.html', {})
 
