add bottom button

--- a/src/delivery.html
+++ b/src/delivery.html
@@ -144,6 +144,7 @@
 		</main>
 		@@include('html/footer.html', {})
 		@@include('html/calculation.html', {})
+		@@include('html/buttons.html', {})
 	</div>
 	@@include('html/scripts.html', {})
 
