--- a/src/catalog.html
+++ b/src/catalog.html
@@ -86,6 +86,7 @@
 		</main>
 		@@include('html/footer.html', {})
 		@@include('html/calculation.html', {})
+		@@include('html/buttons.html', {})
 	</div>
 	@@include('html/scripts.html', {})
 
