--- a/src/company.html
+++ b/src/company.html
@@ -149,8 +149,10 @@
 		</main>
 		@@include('html/footer.html', {})
 		@@include('html/calculation.html', {})
+		@@include('html/buttons.html', {})
 	</div>
 	@@include('html/scripts.html', {})
+	<script src="js/typed.js"></script>
 
 </body>
 
