--- a/src/safety.html
+++ b/src/safety.html
@@ -106,6 +106,7 @@
 		</main>
 		@@include('html/footer.html', {})
 		@@include('html/calculation.html', {})
+		@@include('html/buttons.html', {})
 	</div>
 	@@include('html/scripts.html', {})
 
