--- a/src/html/catalog/catalog_buttons.html
+++ b/src/html/catalog/catalog_buttons.html
@@ -15,23 +15,23 @@
 			</form>
 		</div>
 		<div class="connection__call-button btn-open">
-			<img src="@img/call.png" alt="">
+			<img src="../@img/call.png" alt="">
 		</div>
 	</div>
 	<div class="connection__chat">
 		<div class="connection__chat-connect chat hidden">
 			<a href="#" target="_blank" class="chat__mail">
-				<img src="@img/mail.svg" alt="">
+				<img src="../@img/mail.svg" alt="">
 			</a>
 			<a href="#" target="_blank" class="chat__whatsapp">
-				<img src="@img/whatsapp.svg" alt="">
+				<img src="../@img/whatsapp.svg" alt="">
 			</a>
 			<a href="#" target="_blank" class="chat__telegram">
-				<img src="@img/telegramm.svg" alt="">
+				<img src="../@img/telegramm.svg" alt="">
 			</a>
 		</div>
 		<div class="connection__chat-button btn-open">
-			<img src="@img/message.png" alt="">
+			<img src="../@img/message.png" alt="">
 		</div>
 	</div>
 </div>
