--- a/src/index.html
+++ b/src/index.html
@@ -254,6 +254,7 @@
 		@@include('html/calculation.html', {})
 		@@include('html/buttons.html', {})
 	</div>
+	<script src="js/typed.min.js"></script>
 	@@include('html/scripts.html', {})
 
 </body>
