--- a/src/html/catalog/catalog_buttons.html
+++ b/src/html/catalog/catalog_buttons.html
@@ -5,7 +5,7 @@
 				<h3 class="call__form-title">Заполните форму или позвоните по номеру указанному ниже</h3>
 				<p class="call__form-subtitle">Наши менеджеры проконсультируют вас по любой из наших услуг.</p>
 				<div class="call__form-input">
-					<input type="tel" id="connectionCallTel">
+					<input type="tel" required id="connectionCallTel">
 					<button id="callFormSubmit">Заказать звонок</button>
 				</div>
 				<div class="call__form-link">
