done node js app

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -28,7 +28,7 @@
 							оборудование для занятия спортом, тематические площадки, канатные конструкции для больших площадок,
 							игровые комплексы для самых маленьких, эко-линейки игрового оборудования, и многое другое.</h3>
 					</div>
-					<div class="catalog__items">
+					<div class="catalog__items" id="catalogItem">
 
 						<a href="catalog/SHR.html" class="catalog__item item">
 							<div class="item__img">
@@ -89,6 +89,7 @@
 		@@include('html/buttons.html', {})
 	</div>
 	@@include('html/scripts.html', {})
+
 
 </body>
 
