--- a/src/catalog/SHLP.html
+++ b/src/catalog/SHLP.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="../styles/swiper-bundle.min.css">
 		<link rel="stylesheet" href="../styles/products.min.css">
 		<!-- Media -->
-		<title>Шелби Ривер</title>
+		<title>Шелби Луп</title>
 	</head>
 	
 	<body>
@@ -127,11 +127,11 @@
 							<div class="products__item">
 				<a href="#product" class="product popup-link">
 				<div class="product__img">
-					<img src="../img/catalog/SHR/SHR0001/1.jpg" alt="">
+					<img src="../img/catalog/SHLP/SHLP0001/1.jpg" alt="">
 				</div>
 				<div class="product__text">
-					<h4 class="product_title"> Игровой канатный комплекс</h4>
-					<p class="product__article">Арт. SHR0001</p>
+					<h4 class="product_title"> Игровая канатная башня</h4>
+					<p class="product__article">Арт. SHLP0001</p>
 				</div>
 				<button type="button">Подробнее</button>
 			</a>
@@ -139,11 +139,11 @@
 		</div><div class="products__item">
 				<a href="#product" class="product popup-link">
 				<div class="product__img">
-					<img src="../img/catalog/SHR/SHR0002/1.jpg" alt="">
+					<img src="../img/catalog/SHLP/SHLP0002/1.jpg" alt="">
 				</div>
 				<div class="product__text">
-					<h4 class="product_title"> Игровой канатный комплекс</h4>
-					<p class="product__article">Арт. SHR0002</p>
+					<h4 class="product_title"> Игровая канатная башня с горкой</h4>
+					<p class="product__article">Арт. SHLP0002</p>
 				</div>
 				<button type="button">Подробнее</button>
 			</a>
@@ -151,11 +151,11 @@
 		</div><div class="products__item">
 				<a href="#product" class="product popup-link">
 				<div class="product__img">
-					<img src="../img/catalog/SHR/SHR0003/1.jpg" alt="">
+					<img src="../img/catalog/SHLP/SHLP0003/1.jpg" alt="">
 				</div>
 				<div class="product__text">
-					<h4 class="product_title"> Игровой канатный комплекс</h4>
-					<p class="product__article">Арт. SHR0003</p>
+					<h4 class="product_title">  Игровая канатная башня с горкой</h4>
+					<p class="product__article">Арт. SHLP0003</p>
 				</div>
 				<button type="button">Подробнее</button>
 			</a>
@@ -163,11 +163,11 @@
 		</div><div class="products__item">
 				<a href="#product" class="product popup-link">
 				<div class="product__img">
-					<img src="../img/catalog/SHR/SHR0004/1.jpg" alt="">
+					<img src="../img/catalog/SHLP/SHLP0004/1.jpg" alt="">
 				</div>
 				<div class="product__text">
-					<h4 class="product_title"> Игровой канатный комплекс</h4>
-					<p class="product__article">Арт. SHR0004</p>
+					<h4 class="product_title">  Игровая канатная башня с горкой</h4>
+					<p class="product__article">Арт. SHLP0004</p>
 				</div>
 				<button type="button">Подробнее</button>
 			</a>
@@ -175,35 +175,11 @@
 		</div><div class="products__item">
 				<a href="#product" class="product popup-link">
 				<div class="product__img">
-					<img src="../img/catalog/SHR/SHR0005/1.jpg" alt="">
+					<img src="../img/catalog/SHLP/SHLP0005/1.jpg" alt="">
 				</div>
 				<div class="product__text">
-					<h4 class="product_title"> Игровой канатный комплекс</h4>
-					<p class="product__article">Арт. SHR0005</p>
-				</div>
-				<button type="button">Подробнее</button>
-			</a>
-			<a href="#" target="_blank" class="products__item-dwg">Скачать DWG</a>
-		</div><div class="products__item">
-				<a href="#product" class="product popup-link">
-				<div class="product__img">
-					<img src="../img/catalog/SHR/SHR0006/1.jpg" alt="">
-				</div>
-				<div class="product__text">
-					<h4 class="product_title"> Игровой канатный комплекс</h4>
-					<p class="product__article">Арт. SHR0006</p>
-				</div>
-				<button type="button">Подробнее</button>
-			</a>
-			<a href="#" target="_blank" class="products__item-dwg">Скачать DWG</a>
-		</div><div class="products__item">
-				<a href="#product" class="product popup-link">
-				<div class="product__img">
-					<img src="../img/catalog/SHR/SHR0007/1.jpg" alt="">
-				</div>
-				<div class="product__text">
-					<h4 class="product_title"> Игровой канатный комплекс</h4>
-					<p class="product__article">Арт. SHR0007</p>
+					<h4 class="product_title">  Игровая канатная башня с горкой</h4>
+					<p class="product__article">Арт. SHLP0005</p>
 				</div>
 				<button type="button">Подробнее</button>
 			</a>
