--- a/src/html/catalog/catalog_product.html
+++ b/src/html/catalog/catalog_product.html
@@ -54,7 +54,7 @@
 
 
 
-<div id="buy" class="modal open">
+<div id="buy" class="modal">
 	<div class="modal__dialog">
 		<div class="modal__head">
 			<a href="#" class="modal__close close-modal">
